# skiros_std_lib

./: .gitignore  README.md
skiros_dummy_modules/: CMakeLists.txt  package.xml  plugin.xml
skiros_dummy_modules/include/skiros_dummy_modules/: locate.h
skiros_dummy_modules/src/: locate_dummy.cpp
skiros_lib_conditions/: CMakeLists.txt  package.xml  plugin.xml
skiros_lib_conditions/src/: condition_types.cpp
skiros_lib_reasoner/: CMakeLists.txt  package.xml
skiros_lib_reasoner/aau_spatial_reasoner/: CMakeLists.txt  reasoner.xml
skiros_lib_reasoner/aau_spatial_reasoner/include/aau_spatial_reasoner/: aau_spatial_reasoner.h
skiros_lib_reasoner/aau_spatial_reasoner/src/: aau_spatial_reasoner.cpp
skiros_lib_skill_dummy/: CMakeLists.txt  package.xml  plugin.xml
skiros_lib_skill_dummy/include/skiros_lib_skill_dummy/: drive.h  pick.h  place.h
skiros_lib_skill_dummy/src/: drive.cpp  pick.cpp  place.cpp
skiros_std_lib/: CMakeLists.txt  package.xml
skiros_std_lib/launch/: skiros_system_fake_skills.launch
skiros_std_lib/scenes/: enterprise_scene.xml
skiros_std_lib/scripts/: install_dependencies.sh
task_planners/skiros_task_planner_plugin/: CMakeLists.txt  package.xml  plugin.xml
task_planners/skiros_task_planner_plugin/src/: task_planner.cpp
utils/skiros_lib_tools/: CMakeLists.txt  mainpage.dox  package.xml
utils/skiros_lib_tools/include/skiros_lib_tools/: ActionClientWrapper.h  tools.h  topic_switch.h
utils/skiros_lib_tools/src/: tools.cpp
