<package>
  <name>skiros_lib_conditions</name>
  <version>0.0.1</version>
  <description>
        The library collects all plugins for the skill layer of skiros system
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_config</build_depend>
  <build_depend>skiros_skill</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros_config</run_depend>
  <run_depend>skiros_common</run_depend>
  <run_depend>skiros_skill</run_depend>

  <export>
  <skiros_world_model plugin="${prefix}/plugin.xml"/>
  <skiros_skill plugin="${prefix}/plugin.xml"/>
  </export>

</package>
