<package>
  <name>skiros_lib_reasoner</name>
  <version>0.0.2</version>
  <description>
      Reasoners for SkiROS world objects
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>skiros_msgs</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_config</build_depend>
  <build_depend>skiros_world_model</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>skiros_msgs</run_depend>
  <run_depend>skiros_common</run_depend>
  <run_depend>skiros_config</run_depend>
  <run_depend>skiros_world_model</run_depend>


  <export>
      <skiros_config plugin="${prefix}/aau_spatial_reasoner/reasoner.xml"/>
      <skiros_world_model plugin="${prefix}/aau_spatial_reasoner/reasoner.xml"/>
  </export>

</package>
