<package>
  <name>skiros_lib_skill_dummy</name>
  <version>0.0.1</version>
  <description>
        The library collects all plugins for the skill layer of skiros system
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>skiros_msgs</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_config</build_depend>
  <build_depend>skiros_skill</build_depend>
  <build_depend>skiros_lib_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>skiros_msgs</run_depend>
  <run_depend>skiros_config</run_depend>
  <run_depend>skiros_common</run_depend>
  <run_depend>skiros_skill</run_depend>
  <run_depend>skiros_lib_tools</run_depend>

  <export>
        <skiros_skill plugin="${prefix}/plugin.xml"/>
</export>

</package>
